[package]
name = "rang"
version = "0.1.0"
description = "Just another colour chooser"
authors = ["PiyushXCoder <piyush.raj.kit@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/Rasp-Manager"
keywords = ["color", "color-chooser", "color-picker", "gtk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.3"